# ImageCore

./: .gitignore  CMakeLists.txt  DecodeScheduler.cpp  DecodeScheduler.h  DecodeTypes.h  DecodedImage.h  DecoderRegistry.cpp  DecoderRegistry.h  FileByteCache.cpp  FileByteCache.h  IImageDecoder.h  IImageDecoderFactory.h  IPathByteSource.cpp  IPathByteSource.h  ImageCache.cpp  ImageCache.h  ImageCore.h  ImageCore.vcxproj  ImageCoreLog.cpp  ImageCoreLog.h  ImageDecodeDispatcher.cpp  ImageDecodeDispatcher.h  ImageFormatDetector.cpp  ImageFormatDetector.h  ImageLoader.cpp  ImageLoader.h  ImageRequest.h  LICENSE  README.md
